# morgana

htdocs/: Makefile  index.php  menu.start  srhints.html
morgana/: AUTHORS  Makefile.in  README  TODO  acconfig.h  aclocal.m4  config.status  configure.in  mkinstalldirs
morgana/doc/: index.html
morgana/doc/classes/: include.html  index.html  posix.html
morgana/doc/hacker/: index.html  ipc-base.html  ipc.html
morgana/doc/online/: about.html  controlcenter.html  copyright.gplv2.html  display.html  index.html  main.html
morgana/gui/: 2dwidget.cpp  2dwidget.h  Makefile.in  chat.cpp  chat.h  connection.cpp  connection.h  controlcenter.cpp  controlcenter.h  debug.h  dimtypes.cpp  dimtypes.h  display.cpp  display.h  entity.cpp  entity.h  helpmenu.cpp  helpmenu.h  helpwin.cpp  helpwin.h  intl.h  main.cpp  main.h  netevents.cpp  netevents.h  netids.cpp  netids.h  session.cpp  session.h
morgana/gui/pics/: arrow.xpm  connect.xpm  minus.xpm  modify.xpm  plus.xpm  plusnet.xpm  select.xpm  viewmag+.xpm  viewmag-.xpm
morgana/include/: Makefile.in  config.h.in
morgana/include/internal/: defs.h  int64.h  types.h
morgana/include/posix/: file.h  inet.h  memory.h  process.h  signal.h  socket.h  string.h
morgana/ipc/: Makefile.in  connection.h  debug.h  handler.h  orb.cpp  orb.h  server.cpp  server.h  socket.cpp  socket.h
morgana/po/: POTFILES.in
morgana/server/: Makefile.in
morgana/snns/: Makefile.in  chat.cpp  debug.h  main.cpp  main.h  netget.cpp  netset.cpp  snns.h  unit.h
