dnl #################################
dnl #################################
dnl AutoConf file for Dragon IPC
dnl #################################
dnl #################################
AC_INIT(gui/main.cpp)
PACKAGE=Morgana
VERSION=0.1.0

AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

dnl #################################
dnl Checks for programs.
CXXFLAGS="-O2 -Wall"
dnl AC_PROG_CC
AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_CHECK_TOOL(AR, ar -rc, :)

dnl #################################
dnl Checks for libraries.

MORGANA_CHECK_QTDIR

dnl #################################
dnl Checks for header files.

AC_CONFIG_HEADER(include/config.h)
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h malloc.h memory.h sys/socket.h)

dnl #################################
dnl Checks for typedefs, structures, and compiler characteristics.

AC_CHECK_SIZEOF(short,2)
AC_CHECK_SIZEOF(char,1)
AC_CHECK_SIZEOF(long,4)
AC_CHECK_SIZEOF(int,4)
AC_CHECK_SIZEOF(long long,0)

AC_CHECK_SIZEOF(float,4)
AC_CHECK_SIZEOF(double,8)
AC_CHECK_SIZEOF(long double,12)

AC_CHECK_SIZEOF(bool,1)

AC_TYPE_SIZE_T
MORGANA_CHECK_TYPEIN(sys/socket.h sys/types.h,socklen_t,int)

dnl machine characteristics
AC_C_BIGENDIAN
MORGANA_CHECK_IEEE_FLOAT

dnl compiler features
IPC_C_NAMEDRETURN

dnl #################################
dnl Checks for library functions.

dnl #################################
dnl Options

AC_ARG_WITH(SNNS,Compile Support for SNNS,[
 MAKE_SNNS=snns
 AC_SUBST(MAKE_SNNS)
],[
 MAKE_SNNS=
 AC_SUBST(MAKE_SNNS)
])

dnl #################################
dnl end phasis
AC_OUTPUT(Makefile ipc/Makefile gui/Makefile snns/Makefile server/Makefile \
 intl/Makefile po/Makefile.in include/Makefile)

dnl #################################
dnl EOF
dnl #################################

